--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.8.2",
     "@material-ui/icons": "^3.0.2",
+    "connected-react-router": "^6.2.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
@@ -12,6 +13,7 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-router": "^2.1.2",
+    "redux-thunk": "^2.3.0",
     "typeface-lobster": "0.0.54",
     "typeface-roboto": "0.0.54"
   },
