--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
   - npm run build
 deploy:
   provider: releases
-  github_token: $github_token
+  api_key: $github_token
   local_dir: build
   name: $TRAVIS_TAG
   on:
