--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,9 @@ script:
 deploy:
   provider: releases
   api_key: $github_token
-  local_dir: build
+  file_glob: true
+  file: build/**/*
+  skip_cleanup: true
   name: $TRAVIS_TAG
   on:
     branch: master
